kubernetes/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: flask-app-service
    namespace: default
spec:
    type: ClusterIP
    selector:
        app: flask
    ports:
        - protocol: TCP
          port: 8000
          targetPort: 8000
