kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis
    namespace: default
spec:
    type: ClusterIP
    selector:
        app: redis
    ports:
        - protocol: TCP
          port: 6379
          targetPort: 6379
